--- a/src/pages/menu/ui/Menu.css
+++ b/src/pages/menu/ui/Menu.css
@@ -56,7 +56,7 @@
     width: 100%;
 }
 
-.food__cards{
+.product__cards{
     margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
