add custom scrollbar

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -10,3 +10,8 @@
     margin-left: 240px;
     padding: 0 40px;
 }
+
+html {
+    scrollbar-color: #fe724c transparent;
+    scrollbar-width: thin;
+}
