--- a/src/shared/ui/Loader.css
+++ b/src/shared/ui/Loader.css
@@ -2,7 +2,7 @@
     width: 40px;
     height: 40px;
     border: 4px solid #f3f3f3;
-    border-top: 4px solid #fe724c;  /* твой оранжевый цвет */
+    border-top: 4px solid #fe724c;
     border-radius: 50%;
     animation: spin 0.8s linear infinite;
     margin: 100px auto;
