--- a/src/widgets/productcard/ui/ProductCard.css
+++ b/src/widgets/productcard/ui/ProductCard.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    max-width: 323px;
+    width: 100%;
     height: auto;
     box-shadow: 18px 18px 36px 0 rgba(211, 209, 216, 0.25);
     background: #fff;
