--- a/src/widgets/productcard/ui/ProductCard.css
+++ b/src/widgets/productcard/ui/ProductCard.css
@@ -39,6 +39,7 @@
     height: 165px;
     border-radius: 30px;
     object-fit: contain;
+    box-shadow: 18px 18px 36px 0 rgba(211, 209, 216, 0.25);
 }
 
 .productcard__cart{
@@ -90,12 +91,15 @@
     font-family: var(--font-family);
     font-weight: 600;
     font-size: 12px;
-    color: #000;
+    color: #fff;
     padding: 6px 8px;
     border-radius: 136px;
     box-shadow: 0 6px 24px 0 rgba(254, 114, 76, 0.2);
-    background: #fff;
+    background: #fe724c;
     position: absolute;
+    display: flex;
+    align-items: center;
+    gap: 5px;
     top: 150px;
     left: 15px;
 }
